# demo-code-understanding-mcp

./: README.md  example_claude_desktop_config.json  gh_cli.py  kit_cli.py  pyproject.toml  rl_code_understanding_mcp.py  rl_code_understanding_mcp.py.py  rl_mcp.py  runloop_mcp_config_setup.py  runloop_setup.py  weather.py
cli/: gh_cli.py  kit_cli.py  traced_pytest_cli.py
test/: test_runloop_mcp_config_setup.py
