[project]
name = "rl_mcp"
version = "0.1.0"
description = "A simple MCP server, running on Runloop devboxes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cased-kit>=0.2.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "pytest>=8.3.5",
    "rich>=13.9.4",
    "runloop-api-client>=0.32.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
rl_mcp = "rl_mcp:main"

